--- a/4-log-in/index.css
+++ b/4-log-in/index.css
@@ -35,6 +35,7 @@ main {
     url("./mountain.jpg");
   background-size: cover;
   height: 70%;
+  max-height: 28rem;
   width: 30%;
   max-width: 30rem;
   min-width: 20rem;
@@ -70,10 +71,12 @@ main {
 .form-container {
   background-color: white;
   height: 80%;
+  max-height: 34rem;
   width: 40%;
   max-width: 50rem;
   min-width: 20rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -87,33 +90,16 @@ form {
   width: 70%;
 }
 
-.close {
+.close-btn {
+  display: flex;
   position: relative;
-  right: -78%;
-  top: -45%;
-  width: 32px;
-  height: 32px;
+  right: -45%;
+  top: -9%;
+  height: 0;
+  width: 2rem;
+  font-size: 2rem;
   opacity: 0.3;
   cursor: pointer;
-}
-.close:hover {
-  opacity: 1;
-  transition: opacity ease-out 0.5s;
-}
-.close:before,
-.close:after {
-  position: absolute;
-  left: 15px;
-  content: " ";
-  height: 20px;
-  width: 2px;
-  background-color: #57575793;
-}
-.close:before {
-  transform: rotate(45deg);
-}
-.close:after {
-  transform: rotate(-45deg);
 }
 
 .form-input {
